Simplify Swagger DTO getters/setters.